# FibrosisOptimization

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/: surface_endo.npy  surface_epi.npy
data/meshes/: electrodes_endo.npy  electrodes_epi.npy
data/test_models/: electrodes_endo.npy  electrodes_epi.npy
examples/: example_density_correlation.py  example_interpolation.py  example_iterators.py  example_residuals_correlation.py  example_segments.py
examples/test_models/: example_density.py  example_electrodes.py  example_residuals.py
fibrosisoptimization/: apex_stimulation.py  cardiac_model.py  tissue.py
fibrosisoptimization/core/: fibrosis_generator.py  surface_data.py
fibrosisoptimization/iterators/: __init__.py  bisection_iterator.py  bracketing_iterator.py  false_position_iterator.py  hybrid_iterator.py  iterator.py
fibrosisoptimization/measure/: __init__.py  data_interpolator.py  data_loader.py  data_updater.py  (+9 more)
paper_figures/: action_potential.py  electrograms.py  lv_arrythmia_mesh_builder.py  lv_convergence.py  lv_correlation.py  lv_density.py  lv_density_corr.py  lv_model_convergence.py  lv_model_density_corr.py  lv_model_fibrosis.py  lv_model_ptp_lat_correlation.py  lv_vtk_mesh_builder.py  segment_convergence.py  segment_density.py  segment_fibrosis.py  spiral_wave_period.py  test_models_convergence.py  test_models_fibrosis.py  test_models_patterns_density.py
simulations/: generate_test_mesh.py  optimization_17.py  optimization_68.py  optimization_68_local.py  optimization_lv.py  optimization_test_model.py  run_simulation.py
(+15 files in other folders)
