[build-system]
requires = ["hatchling", "numpy", "scipy"]
build-backend = "hatchling.build"

[project]
name = "fibrosisoptimization"
version = "0.0.1"
authors = [
  { name="Arstanbek Okenov", email="arstanbek.okenov@ugent.be" },
]
description = "A package calculating fibrosis density using LAT and PtP values of EGMs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
